# ibkr-auto-trader

./: .gitignore  AGENT-INSTRUCTIONS.md  CLAUDE.md  CONTEXT.md  KICKOFF.md  PROTOCOL.md  README.md  REVIEWER-BRIEFING.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: gate_prompt.py  gate_search.py
.github/workflows/: verify.yml
_telemetry-archive/autopilot-killed-run/: control.json  status.json
autopilot/summaries/: 028.md
autopilot/verification/: 028.ledger.json
collab/: .collab-kit  .env.example  CONTEXT.md  SEATS.md  seats.example.json
collab/telemetry/: README.md  analyze.py  lanes.json
collab/tests/: conftest.py  test_adapter_profiles.py  test_autopilot.py  test_candidate_assessment.py  test_candidate_disposition.py  test_candidate_evidence.py  test_closeout_report.py  test_collab_common.py  test_conformance.py  test_contracts.py  test_dashboard.py  test_dashboard_failure_modes.py  test_dashboard_observability_fixture.py  test_dashboard_render_contract.py  test_dashboard_scale.py  test_dashboard_stream.py  test_done_contract.py  test_escalation.py  test_exclusive_lease.py  test_gate_runner.py  test_gateway_contract.py  test_handoff_cli.py  test_handoff_core.py  test_handoff_events.py  test_lanes.py  test_lanes_candidate.py  test_lanes_plan.py  test_model_observability.py  test_narrative.py  test_openai_adapter.py  test_openai_repo_seat.py  test_operational_state.py  test_operator_narrative.py  test_operator_requests.py  test_quality_evidence.py  test_registry.py  test_requirements_matrix.py  test_round_decision.py  test_run_budget.py  test_run_budget_fail_closed.py  (+14 more)
collab/tools/: autopilot  autopilot.ps1  closeout-report  closeout-report.ps1  collab-handoff  dashboard  dashboard.ps1  gate  gate.ps1  handoff  handoff.ps1  reconcile-telemetry.py  self_host_smoke  self_host_smoke.ps1  validate-seats.py  watch.py
dashboard/: .gitattributes  .gitignore  .oxfmtrc.json  .oxlintrc.json  README.md  next.config.ts  package.json  playwright.collab.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.mjs  vitest.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/e2e/: collab-observability.spec.ts  collab-operational.spec.ts  home.spec.ts
dashboard/lib/: telemetry.test.ts  telemetry.ts
docs/design/: README.md  codebase-integrity-audit-2026-07-13.html  collab-kit-architecture-autonomous.md  collab-kit-architecture.md  dashboard-human-observability-ledger.md  dashboard-operational-hardening-ledger.md  dashboard-operational-state.md  glossary.md  paper-trading-roadmap.md  prompt-caching-decision-memo-2026-07-20.html  trading-system-design.md
docs/evidence/: dashboard-human-observability-2026-07-22.md  dashboard-human-observability-four-model-2026-07-22.json  dashboard-human-observability-four-model-2026-07-22.md  dashboard-human-observability-operator-proof-2026-07-22.md  dashboard-operational-state-2026-07-21.md
docs/plans/: local-verification-and-provenance-contract.md
handoffs/: MAP-pt4-pt5.md
handoffs/archive/: 007-autopilot-reviewer-reply-r1.md  008-autopilot-builder-reply-r2.md  009-autopilot-reviewer-reply-r3.md  010-autopilot-builder-reply-r4.md  011-autopilot-reviewer-reply-r5.md  018-autopilot-reviewer-reply-r1.md  019-autopilot-builder-reply-r2.md  020-autopilot-reviewer-reply-r3.md  021-autopilot-builder-reply-r4.md  022-autopilot-reviewer-reply-r5.md  023-autopilot-builder-reply-r6.md  024-autopilot-reviewer-reply-r1.md  025-autopilot-reviewer-reply-r1.md  026-autopilot-reviewer-reply-r1.md
handoffs/claimed/: 030-riskpolicy-riskcontrolstate.md  035-pt-6-planner-portfolioprojector.md
handoffs/done/: 001-collab-common.md  002-handoff-state-machine.md  003-handoff-cli.md  004-watchers.md  005-telegram-bridge.md  006-autopilot-driver.md  012-autonomous-mode-architecture-doc-collab-kit-slice-012.md  013-source-tested-consistency-gate-collab-kit-slice-013.md  014-handoff-bundle-command-collab-kit-slice-014.md  027-pt-2-sqlite-state-store.md  (+10 more)
scripts/: repro_dashboard_observability.py  serve_dashboard_observability_fixture.py  verify.py
tests/: conftest.py  test_assembler.py  test_bootstrap.py  test_config.py  test_control_state.py  test_domain.py  test_domain_models.py  test_gateway_reconciliation_identity.py  test_ibkr_gateway.py  test_ibkr_gateway_contract.py  test_ibkr_session.py  test_marketdata.py  test_planner.py  test_projector.py  test_reduce_only.py  test_session_clock.py  test_state.py  test_verify.py
(+149 files in other folders)
