[project]
name = "ibkr-auto-trader"
version = "0.0.0"
description = "Safe, auditable, paper-first automated trading system for a small IBKR taxable account — the first coding domain-pack built on the collab-kit reusable core."
requires-python = ">=3.14"
# Core runtime deps only. PT-3 requires ib_async because the real AccountGateway adapter
# must be importable in an installed application; it remains quarantined to ibkr_gateway.py.
dependencies = [
    "pydantic>=2",   # PT-1 frozen domain models
    "structlog",     # structured logging
    "ib_async",      # PT-3 read-only IBKR account session
]

[project.optional-dependencies]
analysis = ["pandas", "numpy"]   # PT-6 risk math / drift

[dependency-groups]
dev = ["pytest", "pytest-subtests", "ruff", "hypothesis", "pyright"]  # hypothesis: property-based risk tests; pyright: type-check gate

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ibkr_trader"]

[tool.pytest.ini_options]
pythonpath = ["src"]   # src layout without an editable install
testpaths = ["tests"]
markers = [
    # PT-3 opt-in: the one test that dials a real paper Gateway. Skipped unless IBKR_INTEGRATION is set,
    # so CI stays fake-only and green without a Gateway. Run manually: IBKR_INTEGRATION=1 pytest -m integration
    "integration: exercises a live paper Gateway; excluded from CI (manual, needs IBKR_INTEGRATION=1)",
]

[tool.ruff]
line-length = 110
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
include = ["src", "tests", "scripts"]
pythonVersion = "3.14"
typeCheckingMode = "standard"   # tighten to "strict" once the pipeline modules land (money-touching)
venvPath = "."
venv = ".venv"
